--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root {
-    --primaryText: #fff;
-    --secondaryText: #ff015e;
-    --primary: rgba(156, 39, 176, .60);
-    --secondary: rgba(255, 1, 94, .60); 
-    --buttonHover: rgba(156, 39, 176, .40);
-    --smallButtonHover: rgba(0, 0, 0, .25);
+    --primaryText: #cccccc;
+    --secondaryText: #f1575e;
+    --primary: rgba(255, 136, 0, 0.664);
+    --secondary: rgba(238, 129, 115, 0.6); 
+    --buttonHover: rgba(176, 39, 39, 0.4);
+    --smallButtonHover: rgba(73, 0, 0, 0.25);
 }
 
 html {
